[package]
name = "device-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device-simulator  = { path = "../device-simulator" }
env_logger        = "0.11"
futures           = "0.3"
log               = "0.4"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
thiserror         = "1.0"
tokio             = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.16"
tungstenite       = "0.17"
warp              = "0.3"