[package]
name = "device-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono     = "0.4"
env_logger = "0.11"
futures    = "0.3"
log        = "0.4"
rand       = "0.8"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
tokio      = { version = "1.40", features = ["full"] }